deleted some routes and fixed some code

--- a/app/views/religions/show.html.erb
+++ b/app/views/religions/show.html.erb
@@ -11,4 +11,4 @@
 </p>
 
 <%= link_to 'Edit', edit_religion_path(@religion) %> |
-<%= link_to 'Back', religions_entry_path %>
+<%= link_to 'Back', religions_path %>
