--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -3,4 +3,4 @@
 <h3>Lets Get Started.</h3>
 
 <button type="button" class="btn btn-primary btn-lg">
-  <%= link_to "Click to Begin", religions_path %></button>
+  <%= link_to 'Click to Begin', religions_path %></button>
